--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -3,14 +3,91 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-
+  width: 60%;
   font-weight: normal;
 }
 
 body {
   display: flex;
   place-items: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(65, 65, 65);
+  padding: 20px 80px;
+  border: 1px solid white;
+  border-radius: 10px;
+  margin: 20px;
+  min-width: 300px;
+}
+
+label {
+  color: white;
+  font-size: 20px;
+}
+
+input {
+  margin: 5px;
+  width: 100%;
+  height: 40px;
+  border: none;
+  border-radius: 10px;
+  border-bottom: 1px solid rgb(173, 173, 173);
+  background-color: rgb(226, 226, 226);
+}
+
+select {
+  align-items: center;
+  margin: 5px;
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  background-color: rgb(226, 226, 226);
+}
+
+button {
+  padding: 10px 20px;
+  border: 0;
+  border-radius: 20px;
+  background-color: rgb(226, 226, 226);
+}
+
+button:hover {
+  background-color: rgb(173, 173, 173);
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  background-color: white;
+  margin: 20px 0px;
+}
+
+.error {
+  color: red;
+  font-size: 12px;
+}
+
+.certificates {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
+  max-width: 300px;
+  flex-wrap: wrap;
+  text-transform: uppercase;
+}
+
+.certificate {
+  display: flex;
+  flex-direction: column;
+  padding: 5px 10px;
+  border-radius: 10px;
+  background-color: rgb(83, 83, 83);
 }
 
 /* #app {
@@ -34,15 +111,13 @@ a,
   } */
 }
 
-@media (min-width: 1024px) {
-  /* body {
-    display: flex;
-    place-items: center;
+@media only screen and (max-width: 450px) {
+  .container {
+    padding: 20px 5px;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  } */
+    padding: 0px;
+    width: 100%;
+  }
 }
